--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
     <title>Cactus HN</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
     <script src="https://kit.fontawesome.com/a3c1b61cd4.js" crossorigin="anonymous"></script>
     
 </head>
