--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,10 +7,11 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <link href="/assets/css/all.css" rel="stylesheet">
+    <link href="/assets/css/fontawesome.min.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/986d7484b2.js"></script>
-    <script src="https://kit.fontawesome.com/a3c1b61cd4.js" crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/986d7484b2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css" />
+    <script defer src="/assets/js/fontawesome.min.js"></script> <!--load all styles -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
 </head>
 
